<resources>
    <string name="app_name">Hensley_WeightTracker</string>
    <string name="update_daily_weight">Update Daily Weight</string>
    <string name="edit_selected_weight_entry">Edit the selected weight entry</string>
    <string name="update_weight">Update Weight</string>
    <string name="enter_weight_value">Enter a weight value.</string>
    <string name="weight_saved">Weight saved.</string>
    <string name="weight_updated">Weight updated.</string>
    <string name="unable_to_save_weight">Unable to save weight.</string>
    <string name="goal_reached_sms_sent">Goal reached. SMS sent.</string>
    <string name="goal_reached_sms_failed">Goal reached, but SMS could not be sent.</string>
    <string name="goal_reached_message">Congratulations. You reached your goal weight in Weight Tracker.</string>
    <string name="sms_enabled_message">SMS permission granted. Notifications are enabled.</string>
    <string name="sms_granted_toast">SMS permission granted.</string>
    <string name="sms_denied_message">SMS permission denied. The app still works without notifications.</string>
    <string name="sms_denied_toast">SMS permission denied.</string>
    <string name="notification_settings_saved">Notification settings saved.</string>
    <string name="enter_phone_number_first">Enter a phone number first.</string>
    <string name="sms_already_enabled">SMS permission already granted. Notifications are enabled.</string>
    <string name="sms_already_enabled_toast">SMS is already enabled.</string>
    <string name="sms_permission_granted_short">SMS permission granted.</string>
    <string name="sms_permission_not_granted">SMS permission not granted.</string>
    <string name="login_session_not_found">Login session not found.</string>
    <string name="no_goal_set">No goal set</string>
    <string name="goal_weight_display">%1$.1f lbs</string>
    <string name="no_weight_entries_yet">No weight entries yet.</string>
    <string name="weight_value_display">%1$.1f</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
    <string name="weight_entry_deleted">Weight entry deleted.</string>
    <string name="unable_to_delete_entry">Unable to delete entry.</string>
    <string name="add_daily_weight">Add Daily Weight</string>
    <string name="enter_todays_weight_below">Enter today’s weight below</string>
    <string name="weight_hint">Weight</string>
    <string name="save_weight">Save Weight</string>
    <string name="back_button_text">Back</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="goal_weight_label">Goal Weight</string>
    <string name="set_update_goal_weight">Set / Update Goal Weight</string>
    <string name="notifications_title">Notifications</string>
    <string name="weight_history">Weight History</string>
    <string name="date_header">Date</string>
    <string name="weight_header">Weight</string>
    <string name="set_goal_weight_title">Set Goal Weight</string>
    <string name="enter_goal_weight_help">Enter the goal weight you want to reach</string>
    <string name="goal_weight_hint">Goal Weight</string>
    <string name="save_goal">Save Goal</string>
    <string name="app_title_display">Weight Tracker</string>
    <string name="login_help_text">Log in or create an account to get started</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="notification_help_text">Enter a phone number and enable SMS notifications to receive a text message when you reach your goal weight. If permission is denied, the rest of the app will still function.</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="save_phone_number">Save Phone Number</string>
    <string name="enable_sms_notifications">Enable SMS Notifications</string>
    <string name="sms_status_placeholder">SMS permission status will appear here.</string>
</resources>